# morse_humans_navigation

./: CMakeLists.txt  README.md  package.xml
Waypoints/: wp0.txt  wp1.txt  wp2.txt  wp3.txt  wp4.txt  wp5.txt  wp6.txt  wp7.txt
conf/: mv_plan.yaml  wp.yaml  wp_dict.yaml
launch/: humans_navigation.launch  waypoint_generator.launch
scripts/: keyboard.py  waypoint_generator.py
src/morse_humans_navigation/: .navigation.py.swp  navigation.py
wp_dict/: mv_plan.yaml  wp_dict.yaml
