<?xml version="1.0"?>
<package>
  <name>morse_humans_navigation</name>
  <version>0.0.1</version>
  <description>The morse_humans_navigation package</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>

  <url type="website">http://www.strands-project.eu</url>

  <author email="fxj345@cs.bham.ac.uk">Ferdian Jovan</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
